# terrace-guardian

./: LICENSE  README.md  main.py  pyproject.toml  run.sh
.claude/: settings.json
activities/: camera.py  logger.py
agent/: terrace_agent.py  tools.py
docs/superpowers/plans/: 2026-05-05-terrace-automation.md
docs/superpowers/specs/: 2026-05-05-terrace-automation-design.md
models/: types.py
tests/: test_camera.py  test_logger.py  test_models.py  test_tools.py
workflows/: terrace_monitor.py
